--- a/css/bootstrapModify.css
+++ b/css/bootstrapModify.css
@@ -18,9 +18,11 @@ h1 {
   	font-size: 15px;
   	border-color: #357ebd;
 
+
 }
 
 .header-question {
+	text-align: center;
 	font-size: 20px;
 	color: orange;
 }
@@ -48,3 +50,6 @@ h1 {
 }
 
 
+.text-centering {
+	text-align: center;
+}
