--- a/public/css/bootstrapModify.css
+++ b/public/css/bootstrapModify.css
@@ -47,4 +47,11 @@ h1 {
 	color: #000;
 }
 
+.btn-group-custom {
+	text-align: center;
+}
 
+.btn-primary-custom {
+	background-color: #ff6400;
+	color: #fff;
+}
