--- a/public/css/bootstrapModify.css
+++ b/public/css/bootstrapModify.css
@@ -33,8 +33,8 @@ h1 {
 	border-style: dotted;
 }
 
-.btn-submit.btn-start {
-	font-size: 70px;
+.btn-start {
+	font-size: 60px;
 }
 
 .btn-primary {
@@ -71,6 +71,13 @@ h1 {
 	left: 45%;
 }
 
+.btn-escape {
+	color: #fff;
+	font-size: 16;
+	background-color: #000;
+
+}
+
 .header-start {
 	position fixed;
 	top: 20%;
@@ -82,10 +89,6 @@ h1 {
 }
 
 .text-white {
-	color: #fff;
-}
-
-.container-text {
 	color: #fff;
 }
 
