--- a/public/css/bootstrapModify.css
+++ b/public/css/bootstrapModify.css
@@ -25,7 +25,7 @@ h1 {
 	color: #ff6400;
 }
 
-.btn-submit {
+.btn-def-bouvet {
 	font-size: 20px;
 	color: #fff;
 	border-color: #ff6400;
@@ -100,10 +100,5 @@ h1 {
 
 .btn-group-custom {
 	text-align: center;
-	width: 200px;
-}
-
-.btn-primary-custom {
-	background-color: #ff6400;
-	color: #fff;
+	width: 250px;
 }
