--- a/public/css/bootstrapModify.css
+++ b/public/css/bootstrapModify.css
@@ -102,3 +102,23 @@ h1 {
 	text-align: center;
 	width: 250px;
 }
+
+.col-left-border {
+	border-left: 2px dotted; 
+	border-color: #fff;
+
+}
+
+.border-between-question {
+	color: #fff;
+	font-size: 15px;
+	font-style: 4px dotted;
+}
+
+
+.col-lower-border {
+	border-bottom: 2px dotted;
+	border-color: #fff;
+	border-bottom-right-radius: 7em;
+
+}
