Added highlighting of status and gender

--- a/public/css/bootstrapModify.css
+++ b/public/css/bootstrapModify.css
@@ -144,4 +144,11 @@ body {
 
 
 
+.modal-custom-female {
+	background-color: #ffe;
+}
 
+.modal-custom-male {
+	background-color: #ff6400;
+	color:#fff;
+}
