--- a/public/css/bootstrapModify.css
+++ b/public/css/bootstrapModify.css
@@ -7,7 +7,6 @@ Black: #000;
 
 body {
 	background-color: #000;
-
 }
 
 .container {
@@ -61,9 +60,9 @@ body {
     
 .btn-start {
 	font-size: 50px;
-	width: 250px;
-	position: relative;
-    margin-top: 150px;
+	width: 300px;
+
+    margin-top: 10%;
     
 }
 
@@ -127,12 +126,10 @@ body {
 
 
 .logo-bottom-bouvet {
-	position: relative;
-	bottom: -20px;
-	font-size: 60px;
-	color: #ff6400;
-	margin-top: 100px;
+	margin-top: 13%;
+
 }
+
 
 
 /*------------------------*/
@@ -165,6 +162,15 @@ body {
 
 
 .logo-bottom {
-	position: absolute;
-    margin-bottom: -150px;
+	position: relative;
+    margin-bottom: 1cm;
+}
+
+.top-paddings {
+	padding-top: 30px;
+}
+
+
+.top-pad {
+	padding-top: 4%;
 }
