small commit frontend

--- a/public/css/bootstrapModify.css
+++ b/public/css/bootstrapModify.css
@@ -28,6 +28,11 @@ body {
 	border-color: #7f7f7f;
 }
 
+.col-right-border {
+	border-right: 2px dotted;
+	border-color: #7f7f7f;
+}
+
 .border-between-question {
 	color: #7f7f7f;
 	font-size: 15px;
