small fixes to layout

--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -1,5 +1,5 @@
 	<div class="container">
-			<h2 class="text-orange text-large">The Beauty of Data</h2>
+			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
 			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 			<p class="text-white text-medium">Vakkert i seg selv. Viktig for den det gjelder.</p>
 			<br><br>
@@ -7,12 +7,12 @@
 				<p class="text-small">
 					Takk for din påmelding! Det vil bli trukket vinnere, og du vil bli kontaktet på din epostadresse om du har vunnet. </p>
 				</div>
-				<br><br><br><br>
+				<br>
 
 					<a href="#/partial-index"class="btn btn-def-bouvet">
 						<span class="glyphicon glyphicon-home">
 						</span>
 						Tilbake til meny
 					</a>
-				<div class="container logo-bottom-bouvet"> bouvet </div>
+				<div class="logo-bottom-bouvet"> <img src="./photos/logo1.png"> </div>
 			</div>
