--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -1,4 +1,4 @@
-		<div class="text-large text-orange"> &nbsp bouvet </div>
+		<div class="text-large text-orange"> &nbsp <img src="./photos/logo3.png"> </div>
 		<br>
 
 
@@ -25,7 +25,7 @@
 						</label>
 						<br>
 					</div>
-					<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><div class="border-between-question"> -------------------------------------</div><br>
 
 
 
@@ -44,7 +44,7 @@
 							<input type="radio" name="sivilstatus" value="complicated">It's complicated<br>
 						</label>
 					</div>	
-					<br><br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><br><div class="border-between-question"> -------------------------------------</div><br>
 
 
 
@@ -98,7 +98,7 @@
 							<input type="radio" name="pa_hodet" value="hijab">Hijab<br>
 						</label>
 					</div>
-					<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><div class="border-between-question"> -------------------------------------</div><br>
 
 
 
@@ -114,7 +114,7 @@
 							<input type="radio" name="studiested" value="annet">Annet<br>
 						</label>
 					</div>
-					<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><div class="border-between-question"> -------------------------------------</div><br>
 
 
 
@@ -169,7 +169,7 @@
 							<input type="radio" name="musikk" value="klassisk">Klassisk<br>
 						</label>
 					</div>
-					<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><div class="border-between-question"> -------------------------------------</div><br>
 
 
 					<div class="btn-group-vertical" data-toggle="buttons">
@@ -184,7 +184,7 @@
 							<input type="radio" name="personlighet" value="ekstrovertpluss">Ekstrovert med litt innabords
 						</label>
 					</div>
-					<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><div class="border-between-question"> -------------------------------------</div><br>
 
 
 					<div class="btn-group-vertical" data-toggle="buttons">
@@ -232,7 +232,7 @@
 						<label class="btn btn-response">
 							<input type="radio" name="planer_for_kvelden" value="nytelivet">Nyte livet<br>
 						</label>
-						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+						<br><div class="border-between-question"> -------------------------------------</div><br>
 					</div>		
 
 
@@ -254,7 +254,7 @@
 						<label class="btn btn-response">
 							<input type="radio" name="favorittgode" value="pensjon">Pensjon<br>
 						</label>
-						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+						<br><div class="border-between-question"> -------------------------------------</div><br>
 					</div>
 
 
