--- a/public/views/partial-start.html
+++ b/public/views/partial-start.html
@@ -1,9 +1,9 @@
-	<div class="container body-bouvet">
-			<h2 class="text-orange text-large">The Beauty of Data</h2>
+	<div class="container">
+			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
 				
 			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 		
-			<p class="text-white text-medium">Vakkert i seg selv. Viktig for den det gjelder.</p>
+			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
 
 			<!-- a button taking you to the page for registering answer-->
 			<div>
@@ -12,5 +12,5 @@
 				</a>
 			</div>
 
-			<div class="logo-bottom-bouvet"> bouvet </div>
+			<div class="logo-bottom-bouvet"> <img src="./photos/logo1.png"> </div>
 	</div>
