--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -1,17 +1,18 @@
+		<div class="text-large"> &nbsp <img src="./photos/logo3.png"> </div>
 		<div class="container">
-			<h2 class="text-orange text-large">The Beauty of Data</h2>
-			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
-			<p class="text-white text-medium">Vakkert i seg selv. Viktig for den det gjelder.</p>
-			<br><br><br><br>
+			<div class="text-orange text-large">The Beauty of Data</div>
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
+			<br>
 			<div class="text-white">
 				<h2> Dine svar er nå registrert.</h2>
-				<br><br><br>
+				<br>
 				<p> Hvis du vil være med i trekningen av premien, kan du fylle
 					ut informasjonen under. </p>
 				<p> Bouvet vil ikke bruke informasjonen til noe annet formål enn selve trekningen.</p> 
 				<p>Data vil bli slettet etter trekningen.</p>
 				</div>
-				<br><br>
+				<br>
 
 
 					<form class="form-horizontal" ng-submit="submitParticipant()" novalidate>
@@ -33,7 +34,7 @@
 							</div>
 						</div>
 					</form>
-					<br><br><br>
+					<br><br>
 
 				<div>
 					<a href="#/partial-start" class="btn btn-escape text-small">
@@ -43,4 +44,3 @@
 					
 
 				</div>
-				<div class="container logo-bottom-bouvet"> bouvet </div>
