same layout through program flow

--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -1,8 +1,7 @@
 		<div class="text-large"> &nbsp <img src="./photos/logo3.png"> </div>
 		<div class="container">
 			<div class="text-orange text-large">The Beauty of Data</div>
-			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
-			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 			<br>
 			<div class="text-white">
 				<h2> Dine svar er nå registrert.</h2>
@@ -40,6 +39,7 @@
 					<a href="#/partial-start" class="btn btn-escape text-small">
 						Nei takk, tilbake til hovedsiden
 					</a>
+					<br><br>
 				</div>
 					
 
