--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -1,11 +1,11 @@
 	<div class="container">
 			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
 			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
-			<p class="text-white text-medium">Vakkert i seg selv. Viktig for den det gjelder.</p>
+			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
 			<br><br>
-			<div class="text-white">
-				<p class="text-small">
-					Takk for din påmelding! Det vil bli trukket vinnere, og du vil bli kontaktet på din epostadresse om du har vunnet. </p>
+			<div class="text-white text-small">
+				<p>	Takk for din påmelding! Det vil bli trukket vinnere, og du vil </p>
+					<p> bli kontaktet på din epostadresse om du har vunnet. </p>
 				</div>
 				<br>
 
