--- a/public/views/partial-start.html
+++ b/public/views/partial-start.html
@@ -1,7 +1,7 @@
 	<div class="container">
 			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
 				
-			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 		
 			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
 
