first e2e test and added html tag names

--- a/public/views/partial-index.html
+++ b/public/views/partial-index.html
@@ -3,7 +3,7 @@
 		
 		<!--a button that takes you the page where all the answers in the database are displayed -->
 		<div>
-			<a href="#/partial-view-answers" class="btn btn-def-bouvet btn-block btn-front-large">
+			<a href="#/partial-view-answers" name="seeAllAnswers" class="btn btn-def-bouvet btn-block btn-front-large">
 				<span class="glyphicon glyphicon-list"></span>
 				Se alle svar
 			</a>
@@ -13,7 +13,7 @@
 
 		<!--a button that takes you to the page to start registering answers -->
 		<div>
-			<a href="#/partial-start" class="btn btn-def-bouvet btn-block btn-front-large">
+			<a href="#/partial-start" name="registerAnswer" class="btn btn-def-bouvet btn-block btn-front-large">
 				<span class="glyphicon glyphicon-pencil"></span>
 				Registrere svar
 			</a>
@@ -22,7 +22,7 @@
 
 		<!--a button that takes you to a page that displays all the participants in the database -->
 		<div>
-			<a href="#/partial-view-participants" class="btn btn-def-bouvet btn-block btn-front-large">
+			<a href="#/partial-view-participants" name="seeAllParticipants" class="btn btn-def-bouvet btn-block btn-front-large">
 				<span class="glyphicon glyphicon-user"></span>
 				Se alle deltakere
 			</a>
