--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -279,7 +279,7 @@
 			<br>
 
 			<div class="container">
-				<input class="btn btn-def-bouvet" type="submit" value="Registrer svar">
+				<input class="btn btn-def-bouvet" name="registerButton" type="submit" value="Registrer svar">
 			</form>
 		</div>
 		<br><br>
