--- a/public/views/partial-start.html
+++ b/public/views/partial-start.html
@@ -7,7 +7,7 @@
 
 			<!-- a button taking you to the page for registering answer-->
 			<div>
-				<a href="#/partial-register-answer" class="btn btn-def-bouvet btn-start">
+				<a href="#/partial-register-answer" name="startButton" class="btn btn-def-bouvet btn-start">
 					Start
 				</a>
 			</div>
