--- a/public/views/partial-view-answers.html
+++ b/public/views/partial-view-answers.html
@@ -86,7 +86,7 @@
 		</table>
 
 		<!--a button that takes you back to the menu -->
-			<a href="#/partial-index.html" class="btn btn-def-bouvet">
+			<a href="#/partial-index.html" name="menuButton" class="btn btn-def-bouvet">
 				<span class="glyphicon glyphicon-home">
 				</span>
 				Tilbake til meny
