--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -17,18 +17,18 @@
 					<form class="form-horizontal" ng-submit="submitParticipant()" novalidate>
 						<div class="form-group">
 							<div class="col-sm-offset-4 col-sm-4">
-								<input type="text" class="form-control form-field text-white" name="name" placeholder="Navn" ng-model="participant.name" required>
+								<input type="text" class="form-control form-field text-white" name="participantName" placeholder="Navn" ng-model="participant.name" required>
 							</div>
 						</div>
 						<div class="form-group">
 							<div class="col-sm-offset-4 col-sm-4">
-								<input type="email" class="form-control form-field text-white" name="email" placeholder="Email" ng-model="participant.email" required>
+								<input type="email" class="form-control form-field text-white" name="participantEmail" placeholder="Email" ng-model="participant.email" required>
 							</div>
 						</div>
 						<br>
 						<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-8">
-								<button type="submit" class="btn btn-def-bouvet" >Submit info</button>
+								<button type="submit" name="submitButton" class="btn btn-def-bouvet" >Submit info</button>
 								<!-- <button type="submit" ng-disabled="userForm.$invalid" class="btn btn-def-bouvet">Submit info</button>To be used!!--> 
 							</div>
 						</div>
@@ -36,7 +36,7 @@
 					<br><br>
 
 				<div>
-					<a href="#/partial-start" class="btn btn-escape text-small">
+					<a href="#/partial-start" name="escapeButton" class="btn btn-escape text-small">
 						Nei takk, tilbake til hovedsiden
 					</a>
 					<br><br>
