one new test and one halfway there

--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -14,13 +14,13 @@
 
 
 				<div class="col-sm-3 container">
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="kjonn" data-toggle="buttons">
 						<div class="header-question"> Kjønn: </div><br>
 						
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="mann">
 							<input type="radio" name="kjonn" value="mann">Mann<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="kvinne">
 							<input type="radio" name="kjonn" value="kvinne">Kvinne<br>
 						</label>
 						<br>
@@ -29,18 +29,18 @@
 
 
 
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="sivilstatus" data-toggle="buttons">
 						<div class="header-question"> Sivilstatus: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="gift/samboer">
 							<input type="radio" name="sivilstatus" value="gift/samboer">Gift/Samboer<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="skilt">
 							<input type="radio" name="sivilstatus" value="skilt">Skilt<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="singel">
 							<input type="radio" name="sivilstatus" value="singel">Singel<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="complicated">
 							<input type="radio" name="sivilstatus" value="complicated">It's complicated<br>
 						</label>
 					</div>	
@@ -48,18 +48,18 @@
 
 
 
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="alder" data-toggle="buttons">
 						<div class="header-question"> Alder: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="youngster">
 							<input type="radio" name="alder" value="youngster">Youngster<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="coolcat">
 							<input type="radio" name="alder" value="coolcat">Cool Cat<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="hipster">
 							<input type="radio" name="alder" value="hipster">Hipster<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="gammelringrev">
 							<input type="radio" name="alder" value="gammelringrev">Gammel Ringrev<br>
 						</label>
 					</div>
@@ -77,24 +77,24 @@
 
 
 				<div class="col-sm-3 container col-left-border">
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="pa_hodet" data-toggle="buttons">
 						<div class="header-question"> På hodet: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="caps">
 							<input type="radio" name="pa_hodet" value="caps">Caps<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="turban">
 							<input type="radio" name="pa_hodet" value="turban">Turban<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="hette">
 							<input type="radio" name="pa_hodet" value="hette">Hette<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="hjelm">
 							<input type="radio" name="pa_hodet" value="hjelm">Hjem<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="solbriller">
 							<input type="radio" name="pa_hodet" value="solbriller">Solbriller<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="hijab">
 							<input type="radio" name="pa_hodet" value="hijab">Hijab<br>
 						</label>
 					</div>
@@ -102,15 +102,15 @@
 
 
 
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="studiested" data-toggle="buttons">
 						<div class="header-question"> Studiested: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="ntnu">
 							<input type="radio" name="studiested" value="ntnu">NTNU<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="selvlaertrover">
 							<input type="radio" name="studiested" value="selvlaertrover">Selvlært Røver<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="annet">
 							<input type="radio" name="studiested" value="annet">Annet<br>
 						</label>
 					</div>
