added new tests and added html tags

--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -118,15 +118,15 @@
 
 
 
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="programmeringsstil" data-toggle="buttons">
 						<div class="header-question"> Programmeringsstil: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="batenblirtil">
 							<input type="radio" name="programmeringsstil" value="batenblirtil">Båten blir til mens man ror<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="detordnerseg">
 							<input type="radio" name="programmeringsstil" value="detordnerseg">Det ordner seg<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="ordenungmusssein">
 							<input type="radio" name="programmeringsstil" value="ordenungmusssein">Ordenung Muss Sein<br>
 						</label>
 					</div>
@@ -145,57 +145,57 @@
 
 				<div class="col-sm-3 container col-left-border">
 					
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="musikk" data-toggle="buttons">
 						<div class="header-question"> Musikk: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="indie">
 							<input type="radio" name="musikk" value="indie">Indie<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="trash">
 							<input type="radio" name="musikk" value="trash">Trash<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="disco">
 							<input type="radio" name="musikk" value="disco">Disco<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="tronderrock">
 							<input type="radio" name="musikk" value="tronderrock">Trønderrock<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="metal">
 							<input type="radio" name="musikk" value="metal">Metal<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="rave">
 							<input type="radio" name="musikk" value="rave">Rave<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="klassisk">
 							<input type="radio" name="musikk" value="klassisk">Klassisk<br>
 						</label>
 					</div>
 					<br><div class="border-between-question"> -------------------------------------</div><br>
 
 
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="personlighet" data-toggle="buttons">
 						<div class="header-question"> Personlighet: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="introvert">
 							<input type="radio" name="personlighet" value="introvert">Introvert<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="ekstrovert">
 							<input type="radio" name="personlighet" value="ekstrovert">Ekstrovert<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="ekstrovertpluss">
 							<input type="radio" name="personlighet" value="ekstrovertpluss">Ekstrovert med litt innabords
 						</label>
 					</div>
 					<br><div class="border-between-question"> -------------------------------------</div><br>
 
 
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="hypepreferanse" data-toggle="buttons">
 						<div class="header-question"> Hype-preferanse: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="bigdata">
 							<input type="radio" name="hypepreferanse" value="bigdata">Big Data<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="internetofthings">
 							<input type="radio" name="hypepreferanse" value="internetofthings">Internet of Things<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="laerkidsakoding">
 							<input type="radio" name="hypepreferanse" value="laerkidsakoding">Lær Kidsa Koding<br>
 						</label>
 						<br>
@@ -215,21 +215,21 @@
 
 
 				<div class="col-sm-3 container col-left-border">
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="planerforkvelden" data-toggle="buttons">
 						<div class="header-question"> Planer for kvelden: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="endresivilstatus">
 							<input type="radio" name="planer_for_kvelden" value="endresivilstatus">Endre sivilstatus<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="smiskemedsjefen">
 							<input type="radio" name="planer_for_kvelden" value="smiskemedsjefen">Smiske med sjefen<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="mingle">
 							<input type="radio" name="planer_for_kvelden" value="mingle">Mingle<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="kode">
 							<input type="radio" name="planer_for_kvelden" value="kode">Kode<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="nytelivet">
 							<input type="radio" name="planer_for_kvelden" value="nytelivet">Nyte livet<br>
 						</label>
 						<br><div class="border-between-question"> -------------------------------------</div><br>
@@ -237,21 +237,21 @@
 
 
 
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="favorittgode" data-toggle="buttons">
 						<div class="header-question"> Favorittgode på jobb: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="fribar">
 							<input type="radio" name="favorittgode" value="fribar">Fri bar på julebordet<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="gadgetkonto">
 							<input type="radio" name="favorittgode" value="gadgetkonto">Gadgetkonto<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="kurskonferanse">
 							<input type="radio" name="favorittgode" value="kurskonferanse">Kurs og konferanser<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="frikantine">
 							<input type="radio" name="favorittgode" value="frikantine">Fri kantine<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="pensjon">
 							<input type="radio" name="favorittgode" value="pensjon">Pensjon<br>
 						</label>
 						<br><div class="border-between-question"> -------------------------------------</div><br>
@@ -259,12 +259,12 @@
 
 
 
-					<div class="btn-group-vertical" data-toggle="buttons">
+					<div class="btn-group-vertical" id="premie" data-toggle="buttons">
 						<div class="header-question"> Premie hvis du vinner: </div><br>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="moto360">
 							<input type="radio" name="premie_hvis_du_vinner" value="moto360">Moto360<br>
 						</label>
-						<label class="btn btn-response">
+						<label class="btn btn-response" name="oculusrift">
 							<input type="radio" name="premie_hvis_du_vinner" value="oculusrift">Oculus Rift<br>
 						</label>
 					</div>
