--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -14,7 +14,7 @@
 
 
 				<div class="col-sm-3 container">
-					<div class="btn-group-vertical" id="kjonn" data-toggle="buttons">
+					<div class="btn-group-vertical col-bottom-border" id="kjonn" data-toggle="buttons">
 						<div class="header-question"> Kjønn: </div><br>
 						
 						<label class="btn btn-response" name="mann">
@@ -25,11 +25,11 @@
 						</label>
 						<br>
 					</div>
-					<br><div class="border-between-question"> -------------------------------------</div><br>
+					<br><br>
 
 
 
-					<div class="btn-group-vertical" id="sivilstatus" data-toggle="buttons">
+					<div class="btn-group-vertical col-bottom-border" id="sivilstatus" data-toggle="buttons">
 						<div class="header-question"> Sivilstatus: </div><br>
 						<label class="btn btn-response" name="gift/samboer">
 							<input type="radio" name="sivilstatus" value="gift/samboer">Gift/Samboer<br>
@@ -43,8 +43,9 @@
 						<label class="btn btn-response" name="complicated">
 							<input type="radio" name="sivilstatus" value="complicated">It's complicated<br>
 						</label>
+						<br>
 					</div>	
-					<br><br><div class="border-between-question"> -------------------------------------</div><br>
+					<br><br><br>
 
 
 
@@ -77,7 +78,7 @@
 
 
 				<div class="col-sm-3 container col-left-border">
-					<div class="btn-group-vertical" id="pa_hodet" data-toggle="buttons">
+					<div class="btn-group-vertical col-bottom-border" id="pa_hodet" data-toggle="buttons">
 						<div class="header-question"> På hodet: </div><br>
 						<label class="btn btn-response" name="caps">
 							<input type="radio" name="pa_hodet" value="caps">Caps<br>
@@ -97,12 +98,13 @@
 						<label class="btn btn-response" name="hijab">
 							<input type="radio" name="pa_hodet" value="hijab">Hijab<br>
 						</label>
+						<br>
 					</div>
-					<br><div class="border-between-question"> -------------------------------------</div><br>
+					<br><br>
 
 
 
-					<div class="btn-group-vertical" id="studiested" data-toggle="buttons">
+					<div class="btn-group-vertical col-bottom-border" id="studiested" data-toggle="buttons">
 						<div class="header-question"> Studiested: </div><br>
 						<label class="btn btn-response" name="ntnu">
 							<input type="radio" name="studiested" value="ntnu">NTNU<br>
@@ -113,8 +115,9 @@
 						<label class="btn btn-response" name="annet">
 							<input type="radio" name="studiested" value="annet">Annet<br>
 						</label>
+						<br>
 					</div>
-					<br><div class="border-between-question"> -------------------------------------</div><br>
+					<br><br>
 
 
 
@@ -145,7 +148,7 @@
 
 				<div class="col-sm-3 container col-left-border">
 					
-					<div class="btn-group-vertical" id="musikk" data-toggle="buttons">
+					<div class="btn-group-vertical col-bottom-border" id="musikk" data-toggle="buttons">
 						<div class="header-question"> Musikk: </div><br>
 						<label class="btn btn-response" name="indie">
 							<input type="radio" name="musikk" value="indie">Indie<br>
@@ -168,11 +171,12 @@
 						<label class="btn btn-response" name="klassisk">
 							<input type="radio" name="musikk" value="klassisk">Klassisk<br>
 						</label>
+						<br>
 					</div>
-					<br><div class="border-between-question"> -------------------------------------</div><br>
+					<br><br>
 
 
-					<div class="btn-group-vertical" id="personlighet" data-toggle="buttons">
+					<div class="btn-group-vertical col-bottom-border" id="personlighet" data-toggle="buttons">
 						<div class="header-question"> Personlighet: </div><br>
 						<label class="btn btn-response" name="introvert">
 							<input type="radio" name="personlighet" value="introvert">Introvert<br>
@@ -183,8 +187,9 @@
 						<label class="btn btn-response" name="ekstrovertpluss">
 							<input type="radio" name="personlighet" value="ekstrovertpluss">Ekstrovert med litt innabords
 						</label>
+						<br>
 					</div>
-					<br><div class="border-between-question"> -------------------------------------</div><br>
+					<br><br>
 
 
 					<div class="btn-group-vertical" id="hypepreferanse" data-toggle="buttons">
@@ -215,7 +220,7 @@
 
 
 				<div class="col-sm-3 container col-left-border">
-					<div class="btn-group-vertical" id="planerforkvelden" data-toggle="buttons">
+					<div class="btn-group-vertical col-bottom-border" id="planerforkvelden" data-toggle="buttons">
 						<div class="header-question"> Planer for kvelden: </div><br>
 						<label class="btn btn-response" name="endresivilstatus">
 							<input type="radio" name="planer_for_kvelden" value="endresivilstatus">Endre sivilstatus<br>
@@ -232,12 +237,13 @@
 						<label class="btn btn-response" name="nytelivet">
 							<input type="radio" name="planer_for_kvelden" value="nytelivet">Nyte livet<br>
 						</label>
-						<br><div class="border-between-question"> -------------------------------------</div><br>
+						<br>
 					</div>		
+					<br><br>
 
 
 
-					<div class="btn-group-vertical" id="favorittgode" data-toggle="buttons">
+					<div class="btn-group-vertical col-bottom-border" id="favorittgode" data-toggle="buttons">
 						<div class="header-question"> Favorittgode på jobb: </div><br>
 						<label class="btn btn-response" name="fribar">
 							<input type="radio" name="favorittgode" value="fribar">Fri bar på julebordet<br>
@@ -254,15 +260,37 @@
 						<label class="btn btn-response" name="pensjon">
 							<input type="radio" name="favorittgode" value="pensjon">Pensjon<br>
 						</label>
-						<br><div class="border-between-question"> -------------------------------------</div><br>
+						<br>
 					</div>
-
+					<br><br>
 
 
 					<div class="btn-group-vertical" id="premie" data-toggle="buttons">
 						<div class="header-question"> Premie hvis du vinner: </div><br>
 						<label class="btn btn-response" name="moto360">
 							<input type="radio" name="premie_hvis_du_vinner" value="moto360">Moto360<br>
+						</label>
+						<label class="btn btn-response" name="oculusrift">
+							<input type="radio" name="premie_hvis_du_vinner" value="oculusrift">Oculus Rift<br>
+						</label>
+					</div>
+				</div>
+
+
+				<br>
+
+			</div>
+
+
+			<br>
+
+			<div class="container">
+				<input class="btn btn-def-bouvet" name="registerButton" type="submit" value="Registrer svar">
+			</form>
+		</div>
+		<br><br>
+
+		<br><br> value="moto360">Moto360<br>
 						</label>
 						<label class="btn btn-response" name="oculusrift">
 							<input type="radio" name="premie_hvis_du_vinner" value="oculusrift">Oculus Rift<br>
