--- a/public/css/bootstrapModify.css
+++ b/public/css/bootstrapModify.css
@@ -9,6 +9,8 @@ body {
 	background-color: #000;
 }
 
+
+
 .bg-white {
 	background-color: #fff;
 }
@@ -23,6 +25,11 @@ body {
 .header-question {
 	text-align: center;
 	font-size: 20px;
+	color: #ff6400;
+}
+
+.header-question::selection {
+	background: #000;
 	color: #ff6400;
 }
 
@@ -71,11 +78,11 @@ body {
 	border-style: dotted 1px;
 	border-radius: 10px;
 }
+
     
 .btn-start {
 	font-size: 50px;
 	width: 300px;
-
     margin-top: 10%;
     
 }
@@ -83,10 +90,11 @@ body {
 .btn-response {
 	color: #ffd;
 	background-color: #000;
-	border-color: #000;
-
 }
 
+.btn-group-vertical>.btn:not(:first-child):not(:last-child) {
+	border-radius: 30px;
+}
 
 
 .btn:hover,
@@ -141,9 +149,7 @@ body {
 
 .logo-bottom-bouvet {
 	margin-top: 13%;
-
 }
-
 
 
 /*------------------------*/
@@ -154,10 +160,6 @@ body {
 	border-color: #ff6400;
 	border-style: solid 1px;
 }
-
-
-
-
 
 
 .modal-custom-female {
@@ -173,17 +175,6 @@ body {
 	background-color: #ff3b30;
 	color:#fff;
 }
-
-
-.logo-bottom {
-	position: relative;
-    margin-bottom: 1cm;
-}
-
-.top-paddings {
-	padding-top: 30px;
-}
-
 
 .top-pad {
 	padding-top: 4%;
