--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -1,6 +1,6 @@
 	<div class="container">
 			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
-			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
 			<br><br>
 			<div class="text-white text-small">
