--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -1,11 +1,13 @@
 		<div class="text-large"> &nbsp <img src="./photos/logo3.png"> </div>
 		<div class="container">
-			<div class="text-orange text-large">The Beauty of Data</div>
-			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+			<h2 class="text-orange text-large ">The Beauty of Data</h2>
+				
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
 			<br>
 			<div class="text-white">
-				<h2> Dine svar er nå registrert.</h2>
-				<br>
+				<h3> Dine svar er nå registrert.</h3>
+				
 				<p> Hvis du vil være med i trekningen av premien, kan du fylle
 					ut informasjonen under. </p>
 				<p> Bouvet vil ikke bruke informasjonen til noe annet formål enn selve trekningen.</p> 
@@ -33,13 +35,13 @@
 							</div>
 						</div>
 					</form>
-					<br><br>
+					<br>
 
 				<div>
 					<a href="#/partial-start" name="escapeButton" class="btn btn-escape text-small">
 						Nei takk, tilbake til hovedsiden
 					</a>
-					<br><br>
+					<br>
 				</div>
 					
 
