--- a/public/views/partial-participant-registered.html
+++ b/public/views/partial-participant-registered.html
@@ -2,10 +2,10 @@
 			<h2 class="text-orange text-large top-pad">The Beauty of Data</h2>
 			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
 			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
-			<br><br>
-			<div class="text-white text-small">
-				<p>	Takk for din påmelding! Det vil bli trukket vinnere, og du vil </p>
-					<p> bli kontaktet på din epostadresse om du har vunnet. </p>
+			<br><br><br>
+			<div class="text-white">
+				<p>	Takk for din påmelding! </p>
+				<p> Du vil bli kontaktet på din epostadresse hvis du vinner. </p>
 				</div>
 				<br>
 
