--- a/public/views/partial-register-answer.html
+++ b/public/views/partial-register-answer.html
@@ -1,4 +1,4 @@
-		<div class="text-large text-orange"> &nbsp <img src="./photos/logo3.png"> </div>
+		<div class="text-large text-orange"> &nbsp <img src="./photos/logo_medium.png"> </div>
 		<br>
 
 
