--- a/public/views/partial-register-participant.html
+++ b/public/views/partial-register-participant.html
@@ -1,4 +1,4 @@
-		<div class="text-large"> &nbsp <img src="./photos/logo3.png"> </div>
+		<div class="text-large"> &nbsp <img src="./photos/logo_medium.png"> </div>
 		<div class="container">
 			<h2 class="text-orange text-large ">The Beauty of Data</h2>
 				
@@ -6,7 +6,7 @@
 			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
 			<br>
 			<div class="text-white">
-				<h3> Dine svar er nå registrert.</h3>
+				<p> Dine svar er nå registrert.</p>
 				
 				<p> Hvis du vil være med i trekningen av premien, kan du fylle
 					ut informasjonen under. </p>
